Bug 67937 - EDITING: Report-Builder: "Print repeated value on group change - No" couldn't be saved
Summary: EDITING: Report-Builder: "Print repeated value on group change - No" couldn't...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.0.2.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:4.3.0 target:4.2.6
Keywords:
Depends on:
Blocks: Database-Reports-Builder
  Show dependency treegraph
 
Reported: 2013-08-09 06:29 UTC by Robert Großkopf
Modified: 2017-07-23 21:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2013-08-09 06:29:10 UTC
Open the database https://bugs.freedesktop.org/attachment.cgi?id=83873 . Start the report, so you could see how it works at this time. There is a bug in the first group - https://bugs.freedesktop.org/show_bug.cgi?id=67935 . Notice, that the first group looks different to the other groups (all dates where printed, for example).
Now open the report for editing.
Mark the field "Date" in the section "Detail". Edit the properties of this field. Change "Print repeated value on group change" to "No". Then start the report in the editing window with 
Edit → Execute Report
You could see the report has been changed. The date in the first group isn't printed when repeated. If this is the right behavior of the field doesn't mention. I don't know, but it seems to be a workaround for bug 67935.
Now save the report
File → Save
Start the report to execute the report again. Could you see, what you have been changed? The date is printed in the first report - if repeated or not.
Reopen the report for editing and have a look at the properties of "Print repeated value on group change". It is set to "Yes". It couldn't be saved as "No".
This bug doesn't say, that this function works right. It only says: The changing of the value could not be saved in the report.
Comment 1 Jochen 2013-12-26 23:20:06 UTC
I can confirm the bug - using LO 4.1.3
Comment 2 Commit Notification 2014-05-27 10:48:34 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7b8e9ea4f9645599f45f7e2f708bab2837dafd0d

fdo#67937 "print on group change" defaults to TRUE



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2014-05-28 15:31:39 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=55e51c5a139b0403513976914e2719318cd3feb9&h=libreoffice-4-2

fdo#67937 "print on group change" defaults to TRUE


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-05-28 15:31:52 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=55658ef8cf8d3ba1b672aa1608162545b814c35b&h=libreoffice-4-3

fdo#67937 "print on group change" defaults to TRUE


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.