fdo#67937 "print on group change" defaults to TRUE

Thus it needs to be saved when it is *false*.

Change-Id: I01bae547afe71ede12fb852c1a9040b7e45bf7b9
Reviewed-on: https://gerrit.libreoffice.org/9502
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>
Tested-by: Lionel Elie Mamane <lionel@mamane.lu>